prevented horizontal overflow for resume on small screens

--- a/src/css/resume.css
+++ b/src/css/resume.css
@@ -8,6 +8,23 @@
   height: auto !important;
 }
 
+.react-pdf__Page__canvas{
+  max-width: 100%;
+  width: 1000px !important;
+  height: auto !important;
+}
+
+@media (max-width: 959px) {
+  .react-pdf__Page__textContent span{
+    display: none;
+  }
+
+  .react-pdf__Page__annotations{
+    display: none !important;
+  }
+}
+
+
 #resume-pdf-div{
   max-width: calc(100vw - 20px);
   display: block;
